--- a/index.html
+++ b/index.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HomeWork</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<h1></h1>
+
 <header>
     <div class="container">
         <a href="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/" target="_blank"><img class="logo" src="img/csgo_logo.jpg" alt="Вроде лого"></a>
-        <nav class="sсroll">
+        <nav>
             <ul>
-                <li><a href="#FAQ"><b style="color: white;">Об игре</b></a></li>
-                <li><a href="#creator"><b style="color: white;">Создатель</b></a></li>
-                <li><a href="#cybersport"><b style="color: white;">Киберспорт</b></a></li>
-                <li><a href="#community"><b style="color: white;">Комьюнити</b></a></li>
+                <li><a id="FAQ1" href="#FAQ"><p><b>Об игре</b></p></a></li>
+                <li><a id="creator1" href="#creator"><p><b>Создатель</b></p></a></li>
+                <li><a id="cybersport1" href="#cybersport"><p><b>Киберспорт</b></p></a></li>
+                <li><a id="community1" href="#community"><p><b>Комьюнити</b></p></a></li>
             </ul>
         </nav>
     </div>
@@ -37,29 +36,33 @@
 <div class="overlay">
     <div class="main">
         <div class="container">
-            <div class="grid1" id="FAQ">
+            <div class="grid __1" id="FAQ">
                 <div class="column"><img src="img/cs7.jpg" alt=""></div>
                 <div class="column">
-                    <p style="font-size: 36px; text-align: center"><b>Об игре:</b></p>
-                    <p style="font-size: 24px; text-align: center"> CS:GO - Многопользовательская компьютерная игра, разработанная компаниями Valve и Hidden Path Entertainment. Выпуск игры состоялся 21 августа 2012 года.</p>
+                    <h1>Об игре:</h1>
+                    <p> CS:GO - Многопользовательская компьютерная игра, разработанная компаниями Valve и Hidden Path Entertainment. Выпуск игры состоялся 21 августа 2012 года.</p><br>
+                    <hr>
                 </div>
             </div>
-            <div class="grid2" id="creator">
+            <div class="grid __1" id="creator">
                 <div class="column">
-                    <p style="font-size: 36px; text-align: center;"><b>Valve:</b></p>
-                    <p style="font-size: 24px; text-align: center;"> Valve - американская компания-разработчик компьютерных игр, создавшая такие серии игр как: Half-Life, Portal, Counter-Strike, Team Fortress, Left 4 Dead, Dota 2 и др.</p>
+                    <h1>Valve:</h1>
+                    <p> Valve - американская компания-разработчик компьютерных игр, создавшая такие серии игр как: Half-Life, Portal, Counter-Strike, Team Fortress, Left 4 Dead, Dota 2 и др.</p><br>
+                    <hr  class="hr">
                 </div>
                 <div class="column"><img src="img/valve-logo.jpg" alt=""></div>
+                <hr  class="hr __1"><br>
             </div>
-            <div class="grid1" id="cybersport">
+            <div class="grid __1" id="cybersport">
                 <div class="column"><img src="img/Cybersport.jpg" alt=""></div>
-                <div class="column"><p style="font-size: 36px; text-align: center"><b>Киберспорт:</b></p>
-                    <p style="font-size: 24px; text-align: center"> Киборспорт в CS:GO - важная составляющай этой игры. CS:GO находится на втором месте самых популярных киберспортивных дисциплин, из за чего является очень популярной игрой.</p>
+                <div class="column"><h1>Киберспорт:</h1>
+                    <p>Киборспорт в CS:GO - важная составляющай этой игры. CS:GO находится на втором месте самых популярных киберспортивных дисциплин, из за чего является очень популярной игрой.</p><br>
+                    <hr>
                 </div> 
             </div>
-            <div class="grid2" id="community">
-                <div class="column"><p style="font-size: 36px; text-align: center"><b>Комьюнити:</b></p>
-                    <p style="font-size: 24px; text-align: center"> Комьюнити CS:GO - самая плохая сторона CS:GO. Игра полна токсичными игроками, и по словам многих игроков, ещё и читерами. Но популярности игра от этого не теряет.</p>
+            <div class="grid __1" id="community">
+                <div class="column"><h1>Комьюнити:</h1>
+                    <p> Комьюнити CS:GO - самая плохая сторона CS:GO. Игра полна токсичными игроками, и по словам многих игроков, ещё и читерами. Но популярности игра от этого не теряет.</p><br>
                 </div>
                 <div class="column"><img src="img/Community.jpg" alt=""></div>
                 </div>
@@ -70,18 +73,18 @@
 
 <footer>
     <div class="container_footer">
-        <div class="end">
+        <div class="grid __1">
             <div class="column">
-                <p style="font-size: 36px; text-align: center"><b>В заключение:</b></p>
-                <p style="font-size: 24px; text-align: center;"> CS:GO - хорошая игра, чтобы убить время с друзьями, <strike>если они есть</strike>. </p>
+                <p><h1>В заключение:</h1></p>
+                <p> CS:GO - хорошая игра, чтобы убить время с друзьями, <strike>если они есть</strike>. </p>
             </div>
             <div class="column">
                 <img src="img/like.png" alt="">
             </div>
         </div>
-        <div class="copiright"><p style="font-size: 16px; text-align: left"> Вроде как бы это всё. Нинаю шо тут писать.</p></div>
+        <div class="copiright">Вроде как бы это всё. Нинаю шо тут писать.</div>
     </div>
 </footer>
-
+    <script src="js/script.js"></script>
 </body>
 </html>
